# VirtualFileSystem

./: CMakeLists.txt  fat_file_system.h  file_system_node.h  folder_node.h  inode.h  main.cpp  path.h  tokenizer.h  virtual_file_system.cpp  virtual_file_system.h
include/: file_system_interface.h  virtual_file_system.h
libs/FileSystemNode/: file_system_node.h
libs/FolderNode/: folder_node.h
libs/Path/: path.h
libs/Tokenizer/: tokenizer.cpp  tokenizer.h
src/: virtual_file_system.cpp
